samples/_failures_safe/1761078043_12ddbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddab65ce.c: In function ‘bfs’:
./samples/SAFE/__tmp_ddab65ce.c:166:9: error: expected expression at end of input
  166 |         for (int i =
      |         ^~~
./samples/SAFE/__tmp_ddab65ce.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ddab65ce.c:166:9: error: expected declaration or statement at end of input
